# django_practice

django-polls/: LICENSE  setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO
mysite/: pyproject.toml
studybud/: pyproject.toml
studybud/base/: urls.py  views.py
studybud/studybud/: settings.py
