[tool.poetry]
name = "django_practice"
version = "0.1.0"
description = ""
authors = ["Hamzeh Batayneh"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-polls = { file = "./django-polls-0.1.tar.gz" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
